--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Start Docker-compose
-        run: docker-compose -f "docker-compose.yml" up -d --build
+        run: docker-compose up blackbox
